# captive_portal

./: .bumpversion.cfg  DEPLOY.md  Makefile  pyproject.toml
deploy/nginx/: captive-portal.conf
deploy/systemd/: captive-portal.service
src/: alembic.ini  app.py  captive_portal.db  main.py  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 66fd59e0a4ff_init.py  ac1a35d853b7_change_action_data_to_jsonb.py  b8b1b8af2c01_backfill_device_timestamps.py
src/configs/: settings.py  site_settings.py
src/dependencies/: user_agent.py
src/models/: base.py
src/routers/: auth_opennds.py  auth_wifidogx.py  device_data.py  user_behavior.py
src/schemas/: book.py
src/shell_script/: copy_ssh.sh  http_pub.sh  http_pub_userlist.sh  mqtt_pub.sh  mqtt_sub.sh
src/static/: datatables.css  echarts.min.js  test.html
src/templates/: base.html  login.html  login1.html  ok.html  test_cookie.html
src/utils/: common.py  except_handle.py  ghlogger.py  log_route.py  pd.py  rds.py  singleton.py  sql.py
