[project]
name = "captive-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "fastapi>=0.121.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "user-agents>=2.2.0",
    "alembic>=1.17.1",
    "psycopg2>=2.9.11",
]
